--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ header {
 
 .logo {
     cursor: pointer;
+    width: 250px;
 }
 
 .nav_links {
@@ -68,22 +69,28 @@ button:hover {
     max-height: 1900px;
 }
 
+#main-text {
+    padding: 0px 55px;
+}
+
 .contentbox1, .contentbox2, .contentbox3 {
-    border: rgba(0,136,169,0.8) solid 2px;
+    border: rgb(255, 255, 255) solid 2px;
     padding: 30px 10px;
     width: 25vw;
     height: 30vh;
     display: inline-flex;
-    background: rgb(255, 255, 255);
+    background: rgba(59, 59, 59, 0.815);
     position: relative;
     /* margin: 60px 0px; */
     border-radius: 0px;
     cursor: pointer;
     justify-content: center;
     align-items: center;
-    font-size: 2.3vw;
-    color: rgb(49, 122, 124);
+    font-size: 2.0vw;
+    color: rgb(255, 255, 255);
     text-align: center;
+    max-height: 350px;
+    font;
 }
 .contentbox1 {
     position: absolute;
@@ -100,7 +107,7 @@ button:hover {
 }
 
 .contentboxesmain {
-    margin-top: 25px;
+    margin-top: 45px;
     margin-bottom: 0px;
     display: flex;
     justify-content: space-between;
@@ -219,6 +226,7 @@ button:hover {
         text-align: center;
         border-radius: 5px;
         vertical-align: middle;
+        max-height: 350px;
     }
     .contentboxesmain {
         display: flex;
@@ -248,5 +256,6 @@ button:hover {
         text-align: center;
         border-radius: 5px;
         vertical-align: middle;
+        max-height: 200px;
 }
 }
