--- a/styles.css
+++ b/styles.css
@@ -205,7 +205,7 @@ button:hover {
     /* display: flex;
     flex-wrap: wrap; */
     justify-content: left;
-    align-items:flex-start;
+    align-items: flex-start;
     list-style-type: none;
     margin: 15px;
     padding-bottom: 20px;;
@@ -219,6 +219,61 @@ button:hover {
 #contact-form {
     color: rgba(46, 229, 157, 0.4);
     margin: 15px;
+}
+
+/* Countdown Timer */
+
+.countdown-timer {
+    font-family: sans-serif;
+    height: 30vh;
+    width: 100vw;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.timer-head {
+    width: 100vw;;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;align-items: center;
+}
+
+section h2 {
+    width: 100vw;;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;align-items: center;
+}
+
+.timer {
+    margin: 15px 30px;
+    width: 10vw;
+    background: rgba(0, 0, 0, 0.5);
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: 15px 10px 20px #6660;
+    cursor: pointer;
+}
+
+.timer p {
+    color: #fff;
+    font-size: 3em;
+    margin: 25px 8px;
+    background: rgba(0, 0, 0, 0);
+}
+
+.timer h5 {
+margin: 0px;
+padding: 10px;
+font-size: 1em;
+background: #000;
+color: #fff;
+text-transform: uppercase;
+border-bottom-left-radius: 10px;
+border-bottom-right-radius: 10px;
+box-shadow: 15px 10px 20px #000;
 }
 
 
